--- a/style.css
+++ b/style.css
@@ -3,6 +3,79 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  @media(max-width: 600px) {
+    .timeline-section{
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      background-color: #C2FBEF;
+  }
+    .timeline {
+        flex-direction: column;
+        align-items: center;
+      }
+    
+      .timeline::before {
+        display: none;
+      }
+    
+      .timeline-point {
+        margin-bottom: 40px;
+      }
+    
+      .point {
+        margin-left: 0;
+      }
+    
+      .date {
+        margin-left: 0;
+      }
+    
+      .desc {
+        margin-left: 0;
+      }
+
+      .passion-image {
+        width: 150px;
+        height: 150px;
+        position:fixed;
+        
+         
+    }
+    }
+    @media (max-width: 1980px) {
+        .rounded-image {
+            width: 150px;
+            height: 150px;
+        }
+        .passion-image {
+            width: 150px;
+            height: 150px;
+            margin-top: -40px;
+            margin-left: 150px; 
+        }
+        .timeline-section{
+          display: flex;
+          width: 100%;
+          flex-wrap: wrap;
+          background-color: #C2FBEF;
+      }
+    }
+
+    @media (max-width: 2480px)
+    {
+      .passion-image {
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        top: -120px;
+        left: 115px;      
+        z-index: 1;
+        pointer-events: none; /* opzionale: evita che l'immagine blocchi click sotto */
+      }
+    }
 body{
     background-color: #C2FBEF;
     color: #1E3231;
@@ -26,17 +99,17 @@ img
     display: flex;
     justify-content: flex-end;
     margin-right: 40px; 
-    margin-top: 20px; 
+    margin-top: 40px; 
     object-fit: cover; /* Serve per non deformare l'immagine */
 }
 
 .passion-image {
     width: 200px;
     height: 200px;
-    position: absolute; /* <-- questa è la chiave */
-    top: 270px;           /* distanza dall’alto */
-    left: 110px;         /* distanza da sinistra */
-    z-index: 2;
+    position: absolute;
+    top: -80px;
+    left: -40px;       
+    z-index: 1;
     pointer-events: none; /* opzionale: evita che l'immagine blocchi click sotto */
   }
 
@@ -52,40 +125,38 @@ img
 }
 
 .timeline-section{
-    display: block;
+    display: flex;
     width: 100%;
-    
+    justify-content: center;
+  align-items: center;
     background-color: #C2FBEF;
 }
 .timeline-container {
-    width: 100%;
-    overflow-x: auto;
-    z-index: 1;
-  }
+  width: 100%;
+  border: 2px solid #1E3231; /* Spessore + stile + colore */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
   
   .timeline {
     display: flex;
     position: relative;
-    justify-content: space-between;
+
     align-items: center;
     padding: 60px 20px;
-    min-width: 800px;
+    
     z-index: 1;
   }
   
-  .timeline::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    height: 4px;
-    width: 100%;
-    background-color: #ff0000;
-    transform: translateY(-50%);
-    z-index: 0;
-  }
   
   .timeline-point {
+    border: 2px solid #6600ff; /* Spessore + stile + colore */
+    width: 300px;
+    height: 280px;
+    flex-wrap: wrap;
+    flex-grow: calc();
     position: relative;
     text-align: center;
     flex: 1;
@@ -99,22 +170,27 @@ img
     border: 4px solid white;
     box-shadow: 0 0 0 2px #3498db;
     margin: 0 auto;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 1;
   }
   
   .date {
-    
+    position: relative;
+    margin-left: 3px;
     margin-top: 10px;
     font-weight: bold;
     color: #333;
     z-index: 1;
-
+    margin: 0 auto;
   }
   
   .desc {
+    position: relative;
+    margin-left: 25px;
     margin-top: 5px;
-    font-size: 24px;
+    font-size: 1em;
     color: #666;
     z-index: 1;
 
