--- a/style.css
+++ b/style.css
@@ -87,15 +87,17 @@ body{
 
 img
 {
-    width: 200px;
+    width: 100%;
+    height: auto;
 
 }
 
 .rounded-image {
     border-radius: 30%;
     box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.7);
-    width: 200px;
-    height: 200px;
+    width: 80%;
+    height: auto;
+    max-width: 200px;
     display: flex;
     justify-content: flex-end;
     margin-right: 40px; 
