--- a/style.css
+++ b/style.css
@@ -4,81 +4,9 @@
     box-sizing: border-box;
   }
 
-  @media(max-width: 1000px) {
-    .timeline-section{
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-      background-color: #C2FBEF;
-  }
-    .timeline {
-        flex-direction: column;
-        align-items: center;
-      }
-    
-      .timeline::before {
-        display: none;
-      }
-    
-      .timeline-point {
-        margin-bottom: 40px;
-      }
-    
-      .point {
-        margin-left: 0;
-      }
-    
-      .date {
-        margin-left: 0;
-      }
-    
-      .desc {
-        margin-left: 0;
-      }
-
-      .passion-image {
-        width: 150px;
-        height: 150px;
-        position:fixed;
-        
-         
-    }
-    }
-    @media (max-width: 1980px) {
-        .rounded-image {
-            width: 150px;
-            height: 150px;
-        }
-        .passion-image {
-            width: 150px;
-            height: 150px;
-            margin-top: -40px;
-            margin-left: 150px; 
-        }
-        .timeline-section{
-          display: flex;
-          width: 100%;
-          flex-wrap: wrap;
-          background-color: #C2FBEF;
-      }
-    }
-
-    @media (max-width: 2480px)
-    {
-      .passion-image {
-        width: 200px;
-        height: 200px;
-        position: absolute;
-        top: -120px;
-        left: 115px;      
-        z-index: 1;
-        pointer-events: none; /* opzionale: evita che l'immagine blocchi click sotto */
-      }
-    }
 body{
     background-color: #C2FBEF;
-    color: #1E3231;
+    color: #d6f8f6;
     font-family: 'Jomhuria', cursive;
     font-size: 40px;
     letter-spacing: 4px;
@@ -89,111 +17,137 @@ img
 {
     width: 100%;
     height: auto;
+    
+}
 
+h1{
+    
+    font-size: 50px;
+    text-align: center;
+    color: #d6f8f6;
+    
+    
+}
+
+header{
+    background-color: #1f3027;
+    
+    z-index: -2;
+}
+.navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #1f3027;
 }
 
 .rounded-image {
-    border-radius: 30%;
-    box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.7);
-    width: 80%;
-    height: auto;
+    position: relative;
+    border-radius: 50%;
+    
     max-width: 200px;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+   
+}
+.image-wrapper {
+    
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 200px;
+    max-height: 200px;
     display: flex;
-    justify-content: flex-end;
-    margin-right: 40px; 
-    margin-top: 40px; 
-    object-fit: cover; /* Serve per non deformare l'immagine */
+    justify-content: center;
+    align-items: center;
+    
 }
 
-.passion-image {
-    width: 200px;
-    height: 200px;
+@property --angle {
+    syntax: '<angle>';
+    initial-value: 0deg;
+    inherits: false;
+}
+
+.image-wrapper::after{
+
+    
+    content: "";
     position: absolute;
-    top: -80px;
-    left: -40px;       
-    z-index: 1;
-    pointer-events: none; /* opzionale: evita che l'immagine blocchi click sotto */
-  }
+    background: linear-gradient(var(--angle), #5dff6d, #00c8ff);
+    
+    width: 95%;
+    height: 95%;
+    border-radius: 100%;
+    z-index: -1;
+    box-shadow: 20px -20px 100px #5dff6d, -20px 20px 100px #00c8ff;
+    animation: 3s spin linear infinite;
+    
+}
+
+@keyframes spin {
+    from {
+        --angle: 0deg;
+    }
+    to {
+        --angle: 360deg;
+    }
+}
+
+
 
 /*section*/
 
 .hero-section{
 
-    display: block;
+
     width: 100%;
-    padding-bottom: 50px;
-    
-    background-color: #7DAA92;
-}
 
-.timeline-section{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-  align-items: center;
-    background-color: #C2FBEF;
-}
-.timeline-container {
-  width: 100%;
-  border: 2px solid #1E3231; /* Spessore + stile + colore */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-  
-  .timeline {
-    display: flex;
     position: relative;
-
     align-items: center;
-    padding: 60px 20px;
-    
-    z-index: 1;
-  }
-  
-  
-  .timeline-point {
-    border: 2px solid #6600ff; /* Spessore + stile + colore */
-    width: 300px;
-    height: 280px;
-    flex-wrap: wrap;
-    flex-grow: calc();
-    position: relative;
-    text-align: center;
-    flex: 1;
-  }
-  
-  .point {
-    width: 20px;
-    height: 20px;
-    background-color: #3498db;
-    border-radius: 50%;
-    border: 4px solid white;
-    box-shadow: 0 0 0 2px #3498db;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-  }
-  
-  .date {
-    position: relative;
-    margin-left: 3px;
-    margin-top: 10px;
-    font-weight: bold;
-    color: #333;
-    z-index: 1;
-    margin: 0 auto;
-  }
-  
-  .desc {
-    position: relative;
-    margin-left: 25px;
-    margin-top: 5px;
-    font-size: 1em;
-    color: #666;
-    z-index: 1;
+    background-color: #284134;
+    z-index: -2;
+}
 
-  }
+.center-div{
+   
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+}
+
+svg {
+    display: block; 
+    margin-bottom: 50vh;
+    
+}
+
+svg path {
+    fill: transparent;
+    stroke: #C4B2D7;
+    stroke-width: 1;
+    stroke-dasharray:300;
+    stroke-dashoffset: 300;
+    animation: draw 5s ease-in-out 1 forwards;
+}
+
+@keyframes draw {
+    0% {
+        stroke-dashoffset: 300;
+    }
+
+    80% {
+        fill: transparent;
+        filter: none;
+    }
+    100% {
+        filter: url(#textShadow);
+        fill: #C4B2D7;
+        stroke-dashoffset: 0;
+    }
+}
