--- a/style.css
+++ b/style.css
@@ -36,11 +36,37 @@ header{
 }
 .navbar{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #1f3027;
+  justify-content: space-between; /* Spinge svg a sinistra e nav-wrapper a destra */
+  align-items: center;
+  padding: 10px;
+  background-color: #1f3027;
+}
+
+.nav-wrapper{
+    display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+.nav-link{
+    position: relative;
+    text-decoration: none;
+    color: #d6f8f6;
+    font-size: 40px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+.nav-link::after{
+    
+    content: "|";
+    position: absolute;
+    right: -10px;
+    
+}
+.nav-link:hover{
+    background-color: #d6f8f6;
+    color: #1f3027;
 }
 
 .rounded-image {
@@ -121,13 +147,28 @@ header{
     align-items: center; 
 }
 
-svg {
+.svg-logo{
+    display: block; 
+    align-self: left;
+    
+}
+.svg-logo path{
+    fill: transparent;
+    stroke: #d6f8f6;
+    stroke-width: 1;
+    stroke-dasharray:300;
+    stroke-dashoffset: 300;
+    animation: drawLogo 5s ease-in-out 1 forwards;
+    
+}
+
+.svg-job {
     display: block; 
     margin-bottom: 50vh;
     
 }
 
-svg path {
+.svg-job path {
     fill: transparent;
     stroke: #C4B2D7;
     stroke-width: 1;
@@ -149,5 +190,43 @@ svg path {
         filter: url(#textShadow);
         fill: #C4B2D7;
         stroke-dashoffset: 0;
+    }
+}
+@keyframes drawLogo {
+    0% {
+        stroke-dashoffset: 300;
+    }
+
+    80% {
+        
+        filter: none;
+    }
+    100% {
+        filter: url(#textShadow);
+        
+        stroke-dashoffset: 0;
+    }
+}
+
+@media (max-width: 400px) {
+    body{
+        font-size: 80px;
+    }
+    h1{
+        font-size: 60px;
+    }
+    .navbar{
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-link{
+        font-size: 20px;
+    }
+    .rounded-image {
+        max-width: 200px;
+    }
+    .image-wrapper {
+        max-width: 150px;
+        max-height: 150px;
     }
 }
