--- a/style.css
+++ b/style.css
@@ -219,14 +219,19 @@ header{
         flex-direction: column;
         align-items: center;
     }
+
     .nav-link{
         font-size: 20px;
     }
     .rounded-image {
-        max-width: 200px;
+        max-width: 300px;
     }
     .image-wrapper {
         max-width: 150px;
         max-height: 150px;
+    }
+    .svg-logo{
+        width: 100;
+        height: 100;
     }
 }
