--- a/style.css
+++ b/style.css
@@ -150,7 +150,8 @@ header{
 .svg-logo{
     display: block; 
     align-self: left;
-    
+    width: 70px;
+    height:70px;
 }
 .svg-logo path{
     fill: transparent;
@@ -231,7 +232,8 @@ header{
         max-height: 150px;
     }
     .svg-logo{
-        width: 100;
-        height: 100;
+        width: 100px;
+        height: 100px;
+        
     }
 }
