--- a/style.css
+++ b/style.css
@@ -223,17 +223,19 @@ header{
     }
 
     .nav-link{
-        font-size: 20px;
+        display: none;
     }
     .rounded-image {
         max-width: 300px;
     }
     .image-wrapper {
+        width: 100%;
+        height: 100%;
         max-width: 300px;
         max-height: 300px;
     }
     .svg-job{
-        width: 700px;
+        width: 600px;
         height: 240px;
         
     }
