--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ header{
     height: 100%;
     max-width: 200px;
     max-height: 200px;
+    margin-top: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
