--- a/style.css
+++ b/style.css
@@ -58,10 +58,10 @@ header{
     transition: background-color 0.3s ease;
 }
 .nav-link::after{
-    
+    pointer-events: none;
     content: "|";
     position: absolute;
-    right: -10px;
+    right: -20px;
     
 }
 .nav-link:hover{
@@ -86,7 +86,7 @@ header{
     height: 100%;
     max-width: 200px;
     max-height: 200px;
-    margin-top: 10vh;
+    margin-top: 10dvh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,7 +166,7 @@ header{
 
 .svg-job {
     display: block; 
-    margin-bottom: 50vh;
+    margin-bottom: 50dvh;
     width: 500px;
     height: 120px;
 }
