--- a/style.css
+++ b/style.css
@@ -313,6 +313,10 @@ header{
     h1{
         font-size: 60px;
     }
+    p{
+        width: 100%;
+        font-size: 40px;
+    }
     .navbar{
         flex-direction: column;
         align-items: center;
@@ -329,6 +333,9 @@ header{
         height: 100%;
         max-width: 300px;
         max-height: 300px;
+    }
+    .scroll-view{
+        animation-range:  entry 0% cover 10%;
     }
     .svg-job{
         width: 700px;
