--- a/style.css
+++ b/style.css
@@ -198,11 +198,14 @@ header{
 @keyframes scroll {
     0% {
         opacity: 0.5;
-        transform: translateX(-100%);
+        scale: 0.5;
+       
+
     }
     100% {
         opacity: 1;
-        transform: translateX(0);
+        scale: 1;
+        
     }
 }
 
